--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.2",
+    "bootstrap": "^5.3.3",
     "formBuilder": "^3.19.13",
+    "formik": "^2.4.6",
     "jquery": "^3.7.1",
     "jquery-ui-dist": "^1.13.3",
     "jquery-ui-sortable": "^1.0.0",
@@ -16,7 +18,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
